# Project_HACOE

hardware_profiler/: profiler.cpp
ir_analyzer/: analyzer.cpp
llvm_passes/: CMakeLists.txt  FeatureExtractorPass.cpp  HardwareAwarePass.cpp
runtime/: perf_runner.py
scripts/: hwcc.py
tests/: main.c  vector_add.c
